[gd_scene load_steps=7 format=3 uid="uid://dbdwu1rmi1bif"]

[ext_resource type="Script" uid="uid://dgj1haxq3udrj" path="res://Scripts/UI/player_stats_ui.gd" id="1_2rnyg"]
[ext_resource type="Texture2D" uid="uid://ddqj82veu76mj" path="res://Assets/GUI/Double/panel_grey.png" id="1_c42cd"]
[ext_resource type="Script" uid="uid://dibteu7e37hji" path="res://Scripts/UI/in_game_menu.gd" id="1_n0mag"]
[ext_resource type="Texture2D" uid="uid://be1c7dgg1iior" path="res://Assets/GUI/Double/minimap_icon_star_yellow.png" id="2_5crhr"]

[sub_resource type="LabelSettings" id="LabelSettings_5crhr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0mag"]
bg_color = Color(0, 0, 0, 1)
corner_detail = 9
expand_margin_bottom = 1.0

[node name="InGameMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2rnyg")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -233.0
offset_right = 414.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_c42cd")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -210.0
offset_right = 229.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 12
columns = 2

[node name="Label_Day" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Tag: n"

[node name="Label_Name" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "<player name>"
label_settings = SubResource("LabelSettings_5crhr")
horizontal_alignment = 2
justification_flags = 162

[node name="Label_Week" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Woche: n"

[node name="Label_Level" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "lvl: n"
label_settings = SubResource("LabelSettings_5crhr")
horizontal_alignment = 2
justification_flags = 162

[node name="line" type="Panel" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n0mag")

[node name="GridContainer2" type="GridContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 12
columns = 2

[node name="Label_MaxHP" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Max HP: xx"

[node name="Label_Cooldown" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Cooldown: xx"
label_settings = SubResource("LabelSettings_5crhr")
horizontal_alignment = 2
justification_flags = 162

[node name="Label_BasicDMG" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Basic DMG: xx"

[node name="Label_AutoAttack" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Auto Attack cd: xx"
label_settings = SubResource("LabelSettings_5crhr")
horizontal_alignment = 2
justification_flags = 162

[node name="Label_Recovery" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Recovery: xx"

[node name="Label_Luck" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Luck: xx"
label_settings = SubResource("LabelSettings_5crhr")
horizontal_alignment = 2
justification_flags = 162

[node name="Label_Armor" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Armor: xx"

[node name="Label_EXPGrowth" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Exp Growth: xx"
label_settings = SubResource("LabelSettings_5crhr")
horizontal_alignment = 2
justification_flags = 162

[node name="Label_MovementSpeed" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Movement Speed: xx"

[node name="Label_pickUpRadius" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Pick up radius: xx"
label_settings = SubResource("LabelSettings_5crhr")
horizontal_alignment = 2
justification_flags = 162

[node name="Label_AttackArea" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Attack Area: xx"

[node name="Label_AreaDuration" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Area Duration: xx"
label_settings = SubResource("LabelSettings_5crhr")
horizontal_alignment = 2
justification_flags = 162

[node name="Label_AttackSpeed" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Attack Speed: xx"

[node name="Label_PjocetileAmount" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Projectile amount: xx"
label_settings = SubResource("LabelSettings_5crhr")
horizontal_alignment = 2
justification_flags = 162

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -413.0
offset_top = -233.0
offset_right = -88.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_c42cd")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
script = ExtResource("1_n0mag")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect2"]
layout_mode = 0
offset_left = 26.0
offset_top = 23.0
offset_right = 299.0
offset_bottom = 429.0
theme_override_constants/separation = 15

[node name="resume" type="Button" parent="NinePatchRect2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33
text = "Resume"

[node name="quit" type="Button" parent="NinePatchRect2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33
text = "Quit"

[node name="musicToggle" type="CheckButton" parent="NinePatchRect2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 1.5
text = "Music"
icon = ExtResource("2_5crhr")

[connection signal="pressed" from="NinePatchRect2/VBoxContainer/resume" to="NinePatchRect2" method="_on_resume_pressed"]
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/quit" to="NinePatchRect2" method="_on_quit_pressed"]
[connection signal="toggled" from="NinePatchRect2/VBoxContainer/musicToggle" to="NinePatchRect2" method="_on_music_toggle_toggled"]
